selestino/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selestino-service
spec:
  selector:
    app: selestino
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
