selestino/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selestino-ingress
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selestino-service
                port:
                  number: 80
  tls:
    - hosts:
        - 
      secretName:
